--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: quidnunc_production
   pool: 5
-  timeout: 5000
+  username: quidnunc
+  password: qn_db_prod_55%js
