--- a/config/enki.yml
+++ b/config/enki.yml
@@ -2,11 +2,12 @@
 # This file contains no secret information, so can be stored in source control (unlike database.yml)
 title: Quidnunc Beta
 url:   http://quidnuncre.com
+exception_notifications: patrick.kennedy@quidnuncre.com
 author:
   name:    Quidnunc Team        # For copyright notice and ATOM feeds
   email:   bigredtriangle@gmail.com # Exception emails will go here, and it is used in ATOM feeds
-  open_id:                  # These are used to login to the admin area
-      - https://profiles.google.com/103382573522916598862
+#   open_id:                  # These are used to login to the admin area
+#       - https://profiles.google.com/103382573522916598862
       # - http://secondaryopenid.com
 
 # Delete the following section if your site will not be acting as an OpenID delegate (http://wiki.openid.net/Delegation)
