--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,9 +1,4 @@
-theme_advanced_toolbar_location: top
-theme_advanced_toolbar_align: left
-theme_advanced_statusbar_location: bottom
-theme_advanced_buttons3_add:
-  - tablecontrols
-  - fullscreen
+toolbar1: styleselect | bold italic | link unlink | undo redo | table
 plugins:
   - table
-  - fullscreen
+  - link
