add bullet list and numlist to tinyMCE

--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,4 +1,4 @@
-toolbar1: styleselect | bold italic | link unlink | media | undo redo | table
+toolbar1: styleselect | bold italic | bullist numlist | link unlink | media | undo redo | table
 plugins:
   - table
   - link
