more REs for Quidnuncs and move post meta info for #show to after body text

--- a/config/enki.yml
+++ b/config/enki.yml
@@ -4,4 +4,4 @@ title: Quidnunc RE
 url:   http://quidnuncre.com
 exception_notifications: patrick.kennedy@quidnuncre.com
 author:
-  name:    Quidnunc Team        # For copyright notice and ATOM feeds
+  name:    Quidnunc RE Team        # For copyright notice and ATOM feeds
