undo change to database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,6 +6,8 @@ development:
   encoding: unicode
   host: localhost
   database: app_dev
+  username: patrickkennedy
+  password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -14,7 +16,9 @@ test:
   adapter: postgresql
   encoding: unicode
   host: localhost
+  username: patrickkennedy
   database: app_test
+  password:
 
 production:
   adapter: postgresql
